--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "5.0.0-rc.0",
     "@mui/styles": "5.0.0-rc.0",
     "@reduxjs/toolkit": "1.6.1",
+    "gh-pages": "3.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.5",
