added songs to gift

--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "react",
+  "name": "Christmas Calendar",
   "version": "1.0.0",
-  "description": "React example starter project",
-  "keywords": [
-    "react",
-    "starter"
-  ],
+  "description": "Jihoon's Christmas Calendar",
+  "homepage": "http://priska96.github.io/christmas-calendar",
+  "keywords": ["react", "starter"],
   "main": "src/index.js",
   "dependencies": {
     "@emotion/react": "11.4.1",
@@ -30,12 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
